# deep-learning-sandbox

./: .gitignore  README.md  pyproject.toml  run.py  setup.sh
scripts/: interactive-gpu.sh
src/: dataset.py  utils.py  visualization.py
src/experiments/: rectified_flow.py
src/experiments/attention/: flash.py  naitive.py
src/experiments/diffusion/: langevin_optimizer.py  model.py  simple_trainer.py
