[project]
name = "deep-learning-sandbox"
version = "0.1.0"
description = "Deep Learning Sandbox"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dataclasses>=0.8",
    "einops>=0.8.1",
    "flask>=3.1.2",
    "imageio>=2.37.2",
    "jax>=0.8.1",
    "matplotlib>=3.10.7",
    "pillow>=12.0.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "wandb>=0.23.0",
]
